Revert "removed backface-visibility: hidden; resolve problem pixel by set correct height image"
This reverts commit 7172f6bf35eef19fc8c3f105d348292f0133f032.

# Conflicts:
#	src/app/core/home/home-page/home-page.component.scss
#	src/app/happening/components/application-wrapper/application-wrapper.component.scss
#	src/app/happening/create-happening-page/create-happening-page.component.scss
#	src/app/happening/happening-page/happening-page.component.scss
#	src/app/match-member/match-member-page/match-member-page.component.scss
#	src/app/participation-happening/participation-happening/participation-happening-page.component.scss

--- a/src/app/participation-happening/participation-happening/participation-happening-page.component.scss
+++ b/src/app/participation-happening/participation-happening/participation-happening-page.component.scss
@@ -11,6 +11,7 @@
     background-image: url('src/assets/bg-bubbles.png');
     background-repeat: repeat;
     background-color: color-base('red');
+    backface-visibility: hidden;
     height: 100%;
     margin: 0 auto;
     padding: 15px;
@@ -142,6 +143,7 @@
       height: 112px;
       background-position: center top;
       background-image: url('src/assets/bubbles.png');
+      backface-visibility: hidden;
 
       @include respond-above('medium') {
       }
